# ARKSA_ServerMaintainer

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.en.md  README.md  run.bat  run.example.ps1
.cargo/: config.toml
.github/workflows/: release.yml
_forked/: ASASM_Updater.lpi  ASASM_Updater.lpr  ASASM_Updater.lps  ASASM_Updater.res  AsaServerCommander.lpi  AsaServerCommander.lpr  AsaServerCommander.lps  AsaServerCommander.res  AsaServerManegerWin.lpi  AsaServerManegerWin.lpr  AsaServerManegerWin.lps  AsaServerManegerWin.res  AsaServerManegerWin_asa_close.bat  AsaServerManegerWin_asa_delmov.bat  AsaServerManegerWin_asa_dl.bat  AsaServerManegerWin_asa_dl2.bat  AsaServerManegerWin_asa_dl2_debug.bat  AsaServerManegerWin_asa_dl_debug.bat  AsaServerManegerWin_asa_filecopy.bat  AsaServerManegerWin_steamcmd_dl.bat  EngramData.txt  Manualy_asa_close.bat  Manualy_asa_dl.bat  Manualy_cmd_dl.bat  ModList.txt  ModList_OLD.txt  NBCall.lpi  NBCall.lpr  NBCall.lps  Version.txt  aboutui.lfm  aboutui.pas  asasm_upd_ui.lfm  asasm_upd_ui.pas  asautils.pas  discord.pas  findui.lfm  findui.pas  frameui.lfm  frameui.pas  (+25 more)
_forked/lang/: AsaServerManegerWin.en.po  AsaServerManegerWin.ja.po  AsaServerManegerWin.ja_dev.po  AsaServerManegerWin.po  AsaServerManegerWin.pot  LangList.txt
assets/: DinoData.txt  ItemData.txt  List.txt
crates/arksa-commander/: Cargo.toml
crates/arksa-commander/src/: main.rs
crates/arksa-core/: Cargo.toml
crates/arksa-core/src/: ark_config.rs  backup.rs  error.rs  game_config.rs  gamedata.rs  ini_doc.rs  launch_args.rs  lib.rs  mod_configs.rs  modlist.rs  process.rs  profile.rs  rcon.rs  server.rs  settings.rs  steamcmd.rs
crates/arksa-gui/: Cargo.toml  build.rs
crates/arksa-gui/i18n/: .gitkeep
crates/arksa-gui/src/: main.rs  world_param_metadata.rs
crates/arksa-gui/ui/: main.slint
crates/arksa-nbcall/: Cargo.toml
crates/arksa-nbcall/src/: main.rs
crates/arksa-notify/: Cargo.toml
crates/arksa-notify/src/: discord.rs  lib.rs  tray.rs
crates/arksa-updater/: Cargo.toml
crates/arksa-updater/src/: main.rs
docs/: INSTALL.en.md  INSTALL.md  ROADMAP.en.md  ROADMAP.md  TROUBLESHOOTING.en.md  TROUBLESHOOTING.md  USAGE.en.md  USAGE.md  architecture.md  manifest-pinning.md  parameters.md
tools/: build-release.ps1  build.bat  extract_param_metadata.py  rebuild.bat
tools/launcher/: run.bat
