[workspace]
resolver = "2"
members = [
    "crates/arksa-core",
    "crates/arksa-notify",
    "crates/arksa-gui",
    "crates/arksa-updater",
    "crates/arksa-commander",
    "crates/arksa-nbcall",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["cetusk"]
license = "MIT"
repository = "https://github.com/cetusk/ARKSA_ServerMaintainer"
publish = false

[workspace.dependencies]
# 内部クレート
arksa-core = { path = "crates/arksa-core" }
arksa-notify = { path = "crates/arksa-notify" }

# Win32
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Console",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
windows-sys = "0.59"

# 非同期 / IO
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
futures = "0.3"

# データ
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust-ini = "0.21"
zip = { version = "2", default-features = false, features = ["deflate"] }

# UI
slint = { version = "1.8", default-features = false, features = ["std", "backend-winit", "renderer-software", "compat-1-2"] }
slint-build = "1.8"

# トレイ・通知
tray-icon = "0.19"
tauri-winrt-notification = "0.7"

# エラー / ログ
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ユーティリティ
once_cell = "1"
dirs = "5"
rand = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
encoding_rs = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
