[package]
name = "arksa-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "ARKSA_ServerMaintainer main GUI application (Slint)."
default-run = "arksa-gui"

[[bin]]
name = "arksa-gui"
path = "src/main.rs"

[dependencies]
arksa-core = { workspace = true }
arksa-notify = { workspace = true }
slint = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Native folder/file picker (Browse…, Import…) and Win32 stderr redirect
# at startup. Only pulled in on Windows so the rest of the workspace can
# still be checked on Linux without GTK pkg-config available.
[target.'cfg(target_os = "windows")'.dependencies]
rfd = { workspace = true }
windows = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
