[package]
name = "arksa-nbcall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "ConPTY-based child process runner. Replaces upstream NBCall.exe."

[[bin]]
name = "arksa-nbcall"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
windows = { workspace = true }
tracing = { workspace = true }
