[package]
name = "arksa-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Discord webhook + Windows tray notifications for ARKSA_ServerMaintainer."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tray-icon = { workspace = true }
tauri-winrt-notification = { workspace = true }
