[package]
name = "arksa-notify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Discord webhook + Windows tray notifications for ARKSA_ServerMaintainer."

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Windows-only deps. We don't use tray-icon's persistent menu (the upstream
# tray menu is out of scope) — only tauri-winrt-notification for toasts.
[target.'cfg(target_os = "windows")'.dependencies]
tauri-winrt-notification = { workspace = true }
