[package]
name = "arksa-updater"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
description = "Self-updater for ARKSA_ServerMaintainer (checks GitHub Releases of cetusk/ARKSA_ServerMaintainer)."

[[bin]]
name = "arksa-updater"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zip = { workspace = true }
